--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 *{box-sizing: border-box;}
 
+body, html{height: 100%;
+    background-color: #e5e5e5;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .topo{width: 100%;
 height: 69px;
 font-size: 37px;
@@ -9,17 +13,19 @@ background-color:  #EC362D;
 display: flex;
 justify-content: center;
 align-items: center;
+position: fixed;
+z-index: 1;
 }
 
 .conteudo{width: 100%;
-height: auto;
+ height: 100vh;
 display: flex;
 flex-direction: column;
-justify-content: center;
+justify-content: space-around;
 align-items: center;
-background-color:whitesmoke;
+padding-top: 390px;
 }
-.seusquizzes{width: 72%;
+.seusquizzes{width: 75%;
 height: 181px;
 display: flex;
 flex-direction: column;
@@ -28,12 +34,12 @@ align-items: center;
 border-radius: 5px;
 border-color: #D4D4D4;
 background-color: #FAFAFA;
-margin-top: 77px;
+margin-top: 70px;
 border-style: dotted;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.texto{font-size: 20px;
+.textinho{font-size: 20px;
     width: 250px;
     height: 107px;
     display: inline-block;
@@ -57,7 +63,39 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
     align-items: center;
     justify-content: center;
 }
+.quizzes {width: 80%;
+          height: 100vh;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          margin-top: 90px;
+          position: initial;
+}
 
+.caixinha{width: 340px;
+         height: 181px;
+         background-color: #ffffff;
+         margin-right: 10px;
+         margin-bottom: 10px;
+         display: flex;
+         justify-content: center;
+         background-image: linear-gradient(#ffffff, #000000);
+         position: relative;
+}
+.img{display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 340px;
+    height: 181px;
+    opacity: 0.9;
+}
+
+.texto{font-size: 19px;
+padding-top: 80px;    
+position: relative;
+color: #ffffff;
+}
 
 @media (max-width: 1100px){
 
