--- a/style.css
+++ b/style.css
@@ -1,45 +1,63 @@
 *{box-sizing: border-box;}
 
-body, html{height: 100%;
+body, html{
+    height: 100%;
     background-color: #e5e5e5;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.topo{width: 100%;
-height: 69px;
-font-size: 37px;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: #ffffff;
-background-color:  #EC362D;
-display: flex;
-justify-content: center;
-align-items: center;
-position: fixed;
-z-index: 1;
+header{ 
+    z-index: 10;
+    width: 100%;
+    height: 69px;
+    font-size: 37px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ffffff;
+    background-color:  #EC362D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;  
 }
 
-.conteudo{width: 100%;
- height: 100vh;
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
-padding-top: 390px;
-}
-.seusquizzes{width: 75%;
-height: 181px;
-display: flex;
-flex-direction: column;
-justify-items:center;
-align-items: center;
-border-radius: 5px;
-border-color: #D4D4D4;
-background-color: #FAFAFA;
-margin-top: 70px;
-border-style: dotted;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+header p{
+    font-size: 37px;
+    font-weight: 700;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 13px;
+    padding-bottom: 13px;
 }
 
-.textinho{font-size: 20px;
+.conteudo{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 390px;
+}
+.seusquizzes{
+    width: 75%;
+    height: 181px;
+    display: flex;
+    flex-direction: column;
+    justify-items:center;
+    align-items: center;
+    border-radius: 5px;
+    border-color: #D4D4D4;
+    background-color: #FAFAFA;
+    margin-top: 70px;
+    border-style: dotted;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom: 33px;
+}
+
+.textinho{
+    font-size: 20px;
     width: 250px;
     height: 107px;
     display: inline-block;
@@ -51,7 +69,8 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
     padding-top: 25px;
 }
 
-.botao{font-size: 21px;
+.botao{
+    font-size: 21px;
     color:#EC362D;
     width: 151px;
     height: 40px;
@@ -63,105 +82,71 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
     align-items: center;
     justify-content: center;
 }
-.quizzes {width: 80%;
-          height: 100vh;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-          margin-top: 90px;
-          position: initial;
+.botao:hover, .botao:focus{
+    cursor: pointer;
+}
+.quizzes {
+    width: 80%;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 90px;
+    position: initial;
 }
 
-.caixinha{width: 340px;
-         height: 181px;
-         background-color: #ffffff;
-         margin-right: 10px;
-         margin-bottom: 10px;
-         display: flex;
-         justify-content: center;
-         background-image: linear-gradient(#ffffff, #000000);
-         position: relative;
+.caixinha{
+    z-index: 3;
+    width: 340px;
+    height: 181px;
+    background-color: #ffffff;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    background-image: linear-gradient(#ffffff, #000000);
+    position: relative;
 }
-.img{display: flex;
+.img{
+    z-index: 1;
+    display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
     width: 340px;
     height: 181px;
     opacity: 0.9;
+    
 }
-
-.texto{font-size: 19px;
-padding-top: 80px;    
-position: relative;
-color: #ffffff;
-}
-
-@media (max-width: 1100px){
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-*------------------------------------------------------------------------------------------------------------------------------*/
-/*PARA DESKTOP*/
-/*------------------------------------------------------------------------------------------------------------------------------*/
-
-header{
-    z-index: 1;
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    height: 69px;
-    background-color:  #EC362D;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+.texto{
+    z-index: 4;
+    width: 95%;
+    height: 54px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-header h1{
-    font-size: 37px;
-    font-weight: 700;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #fff;
+.texto p{
+    font-size: 19px;
+    padding-top: 125px;    
+    position: relative;
+    color: #ffffff;
 }
 
-/*PAGINA 1 DA CRIAÇÃO DE QUIZZ*/
-/*TAMANHO TOTAL DA PAGINA = 1440*/
-/*BOTÃO: 26%*/
-/*ESPAÇO PERGUNTAS: 42%*/
+@media (max-width: 1100px){}
+
+
+
+
 .create-quizz-page {
+    padding-top: 71px;
     position: relative;
-    top: 70px;
     background-color: #E5E5E5;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    
 }
 
 .quizz-data {
@@ -169,8 +154,7 @@ header h1{
     height: 256px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
+    align-items: center;  
 }
 .quizz-data input {
     width: 564px;
@@ -187,6 +171,7 @@ header h1{
 }
 
 .create-quizz-page1, .create-quizz-page2, .create-quizz-page3, .create-quizz-page4{
+    z-index: 8;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -231,6 +216,6 @@ button:hover{
 }
 
 /*ESCONDER ELEMENTOS*/
-.escondido {
+.escondido{
     display: none;
 }
