--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body, html{height: 100%;
     background-color: #e5e5e5;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.tela2 {width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+}
+.hidden{
+    display: none !important;
+}
 .topo{width: 100%;
 height: 69px;
 font-size: 37px;
@@ -16,7 +26,15 @@ align-items: center;
 position: fixed;
 z-index: 1;
 }
-
+.imgtela2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 227px;
+    background: #00000091;
+    position: relative;
+}
 .conteudo{width: 100%;
  height: 100vh;
 display: flex;
@@ -81,6 +99,7 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
          justify-content: center;
          background-image: linear-gradient(#ffffff, #000000);
          position: relative;
+         cursor: pointer;
 }
 .img{display: flex;
     align-items: center;
