--- a/css/telaQuizzes.css
+++ b/css/telaQuizzes.css
@@ -7,8 +7,7 @@ body, html{
 }
 
 .tela2 {
-    width: 100%;
-    height: 100%;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,9 +37,9 @@ header{
     background: #00000091;
     position: relative;
 }
-.img1{
-    width: 100%;
-    height: 227px;
+.img1{width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .textoquizz{
     display: flex;
@@ -53,14 +52,43 @@ header{
     font-size: 39px;
 }
 
-.caixapergunta{width: 759px;
-    height: 676px;
+.caixapergunta{width: 700px;
+    height: 600px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: space-around;
     background-color: #B9B9B9;
+    margin-top: 50px;
 }
 
+.pergunta{width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 0px;
+    color:#ffffff;
+}
+.caixinhaimg{width: 280px;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
+    margin-right: 15px;
+    color: #fff;
+}
+.resposta{width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    word-break: break-word;
+    font-size: 15px;
+}
 header p{
     font-size: 37px;
     font-weight: 700;
@@ -185,7 +213,9 @@ header p{
     position: relative;
     color: #ffffff;
 }
-
+.not-selected{
+    opacity:0.5 !important ;
+}
 @media (max-width: 1100px){}
 
 
