--- a/css/reset.css
+++ b/css/reset.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	font-size: 100%;
-	font: none;
+	font: ;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
